Jun 15, 2004

  * FIXED: Undefined predicate strip_module/2 in thread_httpd.pl when
    there is no access to XPCE.  Dmitry.

  * ADDED: request_header(Name=Value) option to the option list of
    http_get/3 and http_post/4 for adding user request fields.

  * ADDED: Map body throw(status(not_modified)) onto a "304 Not Modified"
    page.  Mike Elston.

May 20, 2003

  * DOCS: Documented http_post_data/3

  * ADDED: form([Name=Value, ...]) input type to http_post_data/3

May 12, 2003

  * FIXED: problem in mime_pack/3 using Name=Value

Mar 4, 2003

  * ADDED: http_open/3: header(+Name, -Value) option.  Wouter
    Jansweijer.

Jan 23, 2003

  * ADDED: Provide User-Agent header for the client libraries

Jan 8, 2003
 
  * ADDED: Support for using proxy servers Option: proxy(Host, Port).

  * ADDED: Support for 302 (document moved) reply in http_open/3.
